--- a/style.css
+++ b/style.css
@@ -1,10 +1,36 @@
 * {
     box-sizing: border-box;
   }
+
+  body {
+    min-height: 450px;
+    height: 100vh;
+    margin: 0;
+    background: radial-gradient(ellipse farthest-corner at center top, #f39264 0%, #f2606f 100%);
+
+    font-family: 'Nunito', sans-serif;
+  }
+
+  .todoList {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 420px;
+    height: 650px;
+    background: #fff;
+  }
+
+  .content {
+    padding: 10px 20px;
+  }
   
   ul {
     margin: 0;
     padding: 0;
+    list-style: none;
+    height: 450px;
+    overflow: auto;
   }
   
   ul li {
@@ -13,7 +39,6 @@
     margin-bottom: 10px;
     background: #eee;
     font-size: 18px;
-    border: 1px green solid;
   }
   
   ul li:hover {
@@ -54,6 +79,7 @@
   .header {
     padding: 30px 40px;
     text-align: center;
+    
   }
   
   .header:after {
@@ -64,26 +90,26 @@
   
   input {
     margin: 0;
-    border: 1px gray solid;
     width: 75%;
     padding: 10px;
     float: left;
-    font-size: 16px;
+    font-size: 16px; 
+    border: 0px solid;
+    border-bottom: 1px solid #8e979c;
   }
+
+  input:focus{
+    outline: none;
+}
   
   .addBtn {
     padding: 10px;
     width: 25%;
-    background: #d9d9d9;
-    color: #555;
+    color: #8e979c;
     float: left;
-    text-align: center;
+    text-align: right;
     font-size: 16px;
     cursor: pointer;
-    transition: 0.3s;
     border-radius: 0;
-  }
-  
-  .addBtn:hover {
-    background-color: #bbb;
+    border-bottom: 1px solid #8e979c;
   }
